--- a/zein.html
+++ b/zein.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="zein.css">
 </head>
+
 <body>
     <div class="wadah">
-        <div class="gambar"><img src="../images/illustration-hero.svg" alt="Illustration"></div>
+        <div class="gambar"><img src="orang.jpg" alt="Illustration"></div>
         <h2>Order Summary</h2>
-        <p class="teks">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+        <p class="teks">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you
+            like!</p>
         <div class="pipit">
 
             <div class="bulat"></div>
@@ -24,4 +27,5 @@
         <div class="akhir">Cancel Order</div>
     </div>
 </body>
+
 </html>
